# StellarSQL

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  cli.yml  search-index.js  settings.html  source-files.js
client/: client.py
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/lazy_static/: trait.LazyStatic.js
implementors/serde/de/: trait.Visitor.js  (+1 more)
logo/: logo.psd  logo_organization.psd
src/: main.rs
src/component/: database.rs  datatype.rs  field.rs  mod.rs  table.rs
src/connection/: message.rs  request.rs  response.rs
src/index/: btree.rs  mod.rs  tree.rs
src/manager/: pool.rs
src/sql/: lexer.rs  mod.rs  parser.rs  query.rs  symbol.rs  worker.rs
src/stellar_sql/: main.rs.html
src/storage/: bytescoder.rs  diskinterface.rs  file.rs  format.rs  index.rs  io.rs  mod.rs  page.rs
stellar_sql/: all.html  fn.env_init.html  fn.main.html  fn.process.html  index.html  sidebar-items.js
stellar_sql/component/: index.html  sidebar-items.js
stellar_sql/connection/: index.html  sidebar-items.js
stellar_sql/index/: index.html  sidebar-items.js
stellar_sql/manager/: index.html  sidebar-items.js
stellar_sql/sql/: index.html  sidebar-items.js
stellar_sql/storage/: index.html  sidebar-items.js
test_data/: 1.in  1.inindex
(+186 files in other folders)
