[package]
name = "stellar_sql"
version = "0.1.0"
authors = ["tigercosmos <phy.tiger@gmail.com>"]
edition = '2018'

[dependencies]
clap = {version = "~2.32.0", features = ["yaml"]}
dotenv_codegen = "0.11.0"
tokio = "0.1"
tokio-io = "0.1"
futures = "0.1"
bytes = "0.4"
lazy_static = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.6"
byteorder = "1"
uuid = {version = "0.7", features = ["serde", "v4"]}
regex = "1.1.5"